--- a/Ovning4/contact.html
+++ b/Ovning4/contact.html
@@ -80,6 +80,8 @@
   </div>
   <div class="invisible">p</div>
 
+  <a href="../../index.html" class="backButton">back</a>
+
     <footer>Here's da Footer</footer>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
