--- a/Ovning4/gallery.html
+++ b/Ovning4/gallery.html
@@ -84,6 +84,8 @@
 
 </div><!-- container-fluid -->
 
+<a href="../../index.html" class="backButton">back</a>
+
     <footer>Here's da Footer</footer>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
