--- a/Ovning4/index.html
+++ b/Ovning4/index.html
@@ -15,6 +15,7 @@
     <![endif]-->
   </head>
   <body>
+    <a href="../../index.html" class="backButton">back</a>
     <nav class="navbar navbar-default">
       <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
@@ -49,6 +50,8 @@
         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
       </p>
     </div>
+
+    <a href="../../index.html" class="backButton">back</a>
 
     <footer>Here's da Footer</footer>
 
