--- a/Ovning5/Index.html
+++ b/Ovning5/Index.html
@@ -7,6 +7,7 @@
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
   </head>
   <body>
+    <a href="../../index.html" class="backButton">back</a>
       <div class="size">
         <span class="glyphicon glyphicon-off"></span>
       </div>
