--- a/Ovning2/index.html
+++ b/Ovning2/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href="https://fonts.googleapis.com/css?family=Audiowide|VT323" rel="stylesheet">
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/css.css">
     <title>Övning 2</title>
   </head>
   <body>
+    <a href="../../index.html" class="backButton">back</a>
     <h1>2016 Top Games</h1>
     <table>
       <tr>
