--- a/Ovning4/contact.html
+++ b/Ovning4/contact.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Övning 4</title>
-
+    <link href="https://fonts.googleapis.com/css?family=Audiowide|VT323" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/master.css" rel="stylesheet">
 
@@ -27,6 +27,7 @@
           </button>
           <a class="navbar-brand" href="contact.html">Contact</a>
         </div>
+
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -80,7 +81,7 @@
   </div>
   <div class="invisible">p</div>
 
-  <a href="../../index.html" class="backButton">back</a>
+  <a href="../../index.html" class="backButton index">back</a>
 
     <footer>Here's da Footer</footer>
 
