--- a/Ovning4/gallery.html
+++ b/Ovning4/gallery.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Övning 4</title>
-
+    <link href="https://fonts.googleapis.com/css?family=Audiowide|VT323" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/master.css">
 
@@ -26,6 +26,10 @@
             <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" href="gallery.html">Gallery</a>
+
+          <div class="backButtonBox">
+            <a href="../../index.html" class="backButton Gallery">back</a>
+          </div>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -83,8 +87,6 @@
   </div><!-- Grid -->
 
 </div><!-- container-fluid -->
-
-<a href="../../index.html" class="backButton">back</a>
 
     <footer>Here's da Footer</footer>
 
