--- a/Ovning5/Index.html
+++ b/Ovning5/Index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>I dont kno wut todoooooo</title>
+    <link href="https://fonts.googleapis.com/css?family=Audiowide|VT323" rel="stylesheet">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/css.css">
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
