mistakes were made

--- a/Ovning4/gallery.html
+++ b/Ovning4/gallery.html
@@ -27,9 +27,6 @@
           </button>
           <a class="navbar-brand" href="gallery.html">Gallery</a>
 
-          <div class="backButtonBox">
-            <a href="../../index.html" class="backButton Gallery">back</a>
-          </div>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -42,6 +39,13 @@
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
     </nav>
+    <a href="../../index.html" class="">
+      <div class="backButton">
+        <p class="backButtonTXT">
+          back
+        </p>
+      </div>
+    </a>
 
 <div class="container-fluid">
   <div class="grid">
